PPT，部分创新,工匠学院

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         </script>
 
 
+    <link rel="stylesheet" href="/static/css/swiper.min.css">
+    <link rel="stylesheet" href="/static/css/animate.min.css">
+
+
+    <script src="/static/js/swiper.min.js"></script>
+    <script src="/static/js/swiper.animate.min.js"></script>
     <script src="/static/js/config.js" type="text/javascript" charset="utf-8"></script>
 
    <script type="text/javascript" src="/static/js/qwebchannel.js"></script>
@@ -27,7 +33,6 @@
 
       <script type="text/javascript">
         try{
-          var a = '111'
           var worldMap;
           new QWebChannel(qt.webChannelTransport, function(channel){
                       worldMap = channel.objects.worldMap;
